--- a/CSS_Designs/WebContent/NewFile.html
+++ b/CSS_Designs/WebContent/NewFile.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<h1 class="animated">Bounce</h1>
+<h1 class="head">Bounce Example</h1>
+
+<div class="css3-notification">
+    <p>It should bounce</p>
+</div>
+
 
 </body>
 </html>
